big commit after FOSDEM